# MovieNight

./: .dockerignore  MovieNight.sln  README.md  deploy.sh  docker-compose.yml
backend/: .env  Dockerfile  Program.cs  backend.csproj  config.cs
backend/Controllers/: profile.cs  recommendation.cs  recommender.cs  user.cs
backend/Models/: movie.cs  profile.cs  recommendation.cs  user.cs
backend/Properties/: launchSettings.json
backend/Services/: profile.cs  recommendation.cs  recommender.cs  user.cs
frontend/: .dockerignore  Cargo.toml  index.html  package-lock.json  package.json
frontend/src/: app.rs  auth_context.rs  config.rs  home.rs  lib.rs  login.rs  profile.rs  recommendation.rs  signup.rs
frontend/src/components/: floating_window.rs  history.rs  md_viewer.rs  mod.rs  movie_info.rs  movie_list.rs  range_slider.rs  sidebar.rs
recommender_system/: .env  Dockerfile  requirements.txt
recommender_system/app/: config.py  llm.py  recommender.py  routes.py
