[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-logger = "0.2"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.47"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
gloo-net = "0.3"
gloo = "0.11.0"
gloo-utils = "0.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
lazy_static = "1.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'KeyboardEvent',
  'HtmlDivElement', 
  'HtmlInputElement'
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false